# ZOM-BVP

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
ZOM/: CMakeLists.txt  config.json
ZOM/include/ZOM/: ZOM.hpp
ZOM/resources/shaders/: background.glsl  basic.glsl  basic.shader  mandelbrot.glsl  rainbow.glsl  siren.glsl
ZOM/src/: Application.cpp  Application.h  CMakeLists.txt  Config.cpp  Config.h  Core.h  Engine.cpp  Engine.h  EngineCommand.cpp  EngineCommand.h  EngineGame.cpp  EngineGame.h  Entrypoint.cpp  Input.cpp  Input.h  Logger.cpp  Logger.h  Profiling.cpp  Profiling.h  Window.h  pch.h
ZOM/src/codes/: ComplexDataType.cpp  ComplexDataType.h  DataType.cpp  DataType.h  Keycodes.cpp  Keycodes.h  Mousecodes.cpp  Mousecodes.h
ZOM/src/events/: Event.h  EventQueue.cpp  EventQueue.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
ZOM/src/layers/: Layer.h  LayerManager.cpp  LayerManager.h
ZOM/src/platform/Windows/: WInput.cpp  WInput.h  WWindow.h  WWindows.cpp
ZOM/src/renderer/: IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  RenderApplication.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  RendererPack.cpp  RendererPack.h  Rendrerer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
ZOM/src/renderer/buffers/: IndexBuffer.cpp  VertexBuffer.cpp
ZOM/src/renderer/scene/: Camera.cpp  Camera.h  CameraMovement.h  OrthographicCamera.cpp  OrthographicCamera.h
ZOM/src/renderingAPI/opengl/: OpenGLCodes.cpp  OpenGLCodes.h  OpenGLCore.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLRenderApplication.cpp  OpenGLRenderApplication.h  OpenGLRenderContext.cpp  OpenGLRenderContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGlVertexArray.h
ZOM/src/renderingAPI/opengl/buffers/: OpenGLIndexBuffer.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
ZOM/src/window/: MainWindow.cpp  MainWindow.h  Window.h
demo/: CMakeLists.txt  demo.cpp
demo/src/: GameLayer.cpp  GameLayer.h  demo.cpp  square.h  trinagle.h
